--- a/trunk/site/templates/bookings/viewenquiry.html
+++ b/trunk/site/templates/bookings/viewenquiry.html
@@ -1,7 +1,7 @@
 {% extends base_path %}
 
 {% block breadcrumbs %}
-    <a href="/bookings/bookinginfo">manage bookings</a>
+<a href="/bookings/collection/viewenquirycollection?enquirycollectionkey={{ enquiry.parent.key }}">go back</a>
 {% endblock %}
 
 {% block pagecontent %}
@@ -13,10 +13,11 @@
 <p>Enquiry Status: {{ enquiry.workflowState }} </p>
 <p>Enquiry Expiry Date: {{ enquiry.expiryDate }} </p>
 
+{% ifnotequal enquiry.workflowState 'temporary' %}
 <form name="advanceEnquiry" method="post" 
-      action="/bookings/enquiry/viewenquiry">
+      action="/bookings/enquiry/advanceenquiry">
 
-  <input type="hidden" name="enquirykey" value="{{ enquirykey }}"/>
+  <input type="hidden" name="enquirykey" value="{{ enquiry.key }}"/>
   {% if transitions %}
     <select name="transition">
       {% for transition in transitions %}
@@ -26,5 +27,152 @@
     <input title="Advance" type="submit" value="Go"/>
   {% endif %}
 </form>
+{% endifnotequal %}
+
+{% if show_search %}
+<hr />
+<form name="findAccommodation" method="post" 
+      action="/bookings/enquiry/findaccommodation">
+  <input type="hidden" name="enquirykey" value="{{ enquiry.key }}"/>
+  <p><strong>Search</strong></p>
+  <table class="listing" cellspacing="0">
+    <tr>
+      <td>City</td>
+      <td colspan="2"> 
+          <select name="city">
+              {% for description in cities %}
+                  <option {% ifequal element.city description %} selected="1"{%endifequal%}>
+                  {{description}}
+                  </option>
+              {% endfor %}
+          </select>
+      </td>
+    </tr>
+    <tr>
+      <td>Type</td>
+      <td colspan="2"> 
+          <select name="type">
+              {% for description in accomtypes %}
+                  <option{%ifequal element.type description %} selected="1"{%endifequal%}>
+                  {{description}}
+                  </option>
+              {% endfor %}
+          </select>
+      </td>
+    </tr>
+    <tr>
+      <td>Start Date</td>
+      <td colspan="2"> 
+       <input type="text" name="start" value="{{ element.start }}" /> </td>
+    </tr>
+    <tr>
+      <td>Number of nights</td>
+      <td colspan="2"> 
+       <input type="text" name="nights" value="{{ element.nights }}" /> </td>
+    </tr>
+    <tr>
+      <td>Requires Wheelchair Access</td>
+      <td colspan="2"> 
+        <input type="checkbox" name="wheelchairAccess" 
+        {% if element.wheelchairAccess %} checked {% endif %} />
+      </td>
+    </tr>
+    <tr>
+      <td>Number of adults</td>
+      <td> <input type="text" name="adults" value="{{ element.adults }}" /> </td>
+    </tr>
+    <tr>
+      <td>Number of children</td>
+      <td> <input type="text" name="children" value="{{ element.children }}" /> </td>
+    </tr>
+    <tr>
+      <td>Number of double beds</td>
+      <td> <input type="text" name="doublerooms" value="{{ element.doublerooms }}" /> </td>
+    </tr>
+    <tr>
+      <td>Number of single beds</td>
+      <td> <input type="text" name="singlerooms" value="{{ element.singlerooms }}" /> </td>
+    </tr>
+  </table>
+  <input title="Find accommodation"
+         type="submit" value="Find Accommodation" />
+</form>
+{% endif %}
+
+{% if show_results %}
+<hr />
+<form name="reserveAccommodation" method="post" 
+      action="/bookings/enquiry/reserveaccommodation">
+  <table class="listing" cellspacing="0">
+      <thead>
+        <td>Select</td>
+        <td>Owner</td>
+        <td>Venue</td>
+        <td>Room</td>
+        <td>Bed</td>
+        <td>Type</td>
+        <td>Capacity</td>
+      </thead>
+      {% for berth in berths %}
+      <tr>
+        <td> <input type="checkbox" name="berth_{{ berth.key }}" /> </td>
+        <td>{{ berth.bed.bedroom.venue.owner.listing_name }}</td>
+        <td>{{ berth.bed.bedroom.venue.name }}</td>
+        <td>{{ berth.bed.bedroom.name }}</td>
+        <td>{{ berth.bed.name }}</td>
+        <td>{{ berth.bed.bedType }}</td>
+        <td>{{ berth.bed.capacity }}</td>
+      </tr>
+      {% endfor %}
+  </table>
+  <input type="hidden" name="enquirykey" value="{{ enquiry.key }}" />
+  <input type="hidden" name="city" value="{{ element.city }}" /> 
+  <input type="hidden" name="type" value="{{ element.type }}" />
+  <input type="hidden" name="start" value="{{ element.start }}" />
+  <input type="hidden" name="nights" value="{{ element.nights }}" />
+  {% if element.wheelchairAccess %}
+    <input type="hidden" name="wheelchairAccess" checked /> 
+  {% endif %} 
+  <input type="hidden" name="adults" value="{{ element.adults }}" />
+  <input type="hidden" name="children" value="{{ element.children }}" />
+  <input title="Reserve accommodation"
+         type="submit" value="Reserve Accommodation" />
+</form>
+{% endif %}
+
+{% if show_bookings %}
+<hr />
+<p><strong>Contracted Bookings</strong>
+  <!-- <a title="Add a new booking"
+     href="/bookings/capturecontractedbooking">
+      <img src="/images/add.png"/>
+    </a> -->
+</p>
+<table class="listing" cellspacing="0">
+    <thead>
+      <td>Reference</td>
+      <td>&nbsp;</td>
+    </thead>
+    {% for contractedbooking in enquiry.contracted_bookings %}
+    <tr>
+      <td><a href="/bookings/viewcontractedbooking?bookingkey={{ contractedbooking.key }}">{{ contractedbooking.bookingNumber }}</a></td>
+      <!-- 
+      <td class="action">
+        <a title="Edit this booking"
+          href="/bookings/editcontractedbooking?contractedbookingkey={{ contractedbooking.key }}">
+          <img src="/images/edit.png"/>
+        </a></td>
+        -->
+      <td class="action">
+        <a title="Delete this booking"
+          href="/bookings/deletecontractedbooking?contractedbookingkey={{ contractedbooking.key }}"
+               onclick="return confirm('Are you sure?');">
+          <img src="/images/delete.png"/>
+        </a></td>
+    </tr>
+    {% endfor %}
+</table>
+{% endif %}
+
 
 {% endblock pagecontent %}
