--- a/trunk/site/templates/bookings/viewenquiry.html
+++ b/trunk/site/templates/bookings/viewenquiry.html
@@ -10,7 +10,7 @@
 <h1>Enquiry</h1>
 
 <p>Enquiry Number: {{ enquiry.referenceNumber }} </p>
-<p>Enquiry Status: {{ enquiry.workflowState }} </p>
+<p>Enquiry Status: {{ enquiry.getState.title }} </p>
 <p>Enquiry Expiry Date: {{ enquiry.expiryDate }} </p>
 
 {% ifnotequal enquiry.workflowState 'temporary' %}
@@ -21,7 +21,7 @@
   {% if transitions %}
     <select name="transition">
       {% for transition in transitions %}
-      <option value="{{ transition }}">{{ transition }}</option>
+      <option value="{{ transition.key.name }}">{{ transition.title }}</option>
       {% endfor %}
     </select>
     <input title="Advance" type="submit" value="Go"/>
