--- a/trunk/site/templates/bookings/viewenquiry.html
+++ b/trunk/site/templates/bookings/viewenquiry.html
@@ -5,13 +5,13 @@
 {% endblock %}
 
 {% block pagecontent %}
-<br />
-
 <h1>Enquiry</h1>
 
-<p>Enquiry Number: {{ enquiry.referenceNumber }} </p>
-<p>Enquiry Status: {{ enquiry.getState.title }} </p>
-<p>Enquiry Expiry Date: {{ enquiry.expiryDate }} </p>
+<p>
+<span>Enquiry Number: <strong>{{ enquiry.referenceNumber }}</strong> </span>
+    <span>Enquiry Status: <strong>{{ enquiry.getState.title }}</strong> </span>
+        <span>Enquiry Expiry Date: <strong>{{ enquiry.expiryDate }}</strong> </span>
+</p>
 
 {% ifnotequal enquiry.workflowState 'temporary' %}
 <form name="advanceEnquiry" method="post" 
