--- a/trunk/site/templates/bookings/viewenquirycollection.html
+++ b/trunk/site/templates/bookings/viewenquirycollection.html
@@ -5,11 +5,9 @@
 {% endblock %}
 
 {% block pagecontent %}
-<br />
-
 <h1>Enquiry Collection</h1>
 
-<p>Enquiry Number: {{ enquirycollection.referenceNumber }} </p>
+<p>Enquiry Number: <strong>{{ enquirycollection.referenceNumber }}</strong> </p>
 <hr />
   
     <p><strong>Enquiries </strong>
