--- a/site/templates/services/viewvenue.html
+++ b/site/templates/services/viewvenue.html
@@ -333,4 +333,35 @@
           {% endfor %}
       </table>
 
+
+    <p><strong>Contracted Bookings</strong>
+      <!-- <a title="Add a new booking"
+         href="/bookings/capturecontractedbooking">
+          <img src="/images/add.png"/>
+        </a> -->
+    </p>
+    <table class="listing" cellspacing="0">
+        <thead>
+          <td>Reference</td>
+          <td>&nbsp;</td>
+        </thead>
+        {% for contractedbooking in contractedbookings %}
+        <tr>
+          <td><a href="/bookings/viewcontractedbooking?bookingkey={{ contractedbooking.key }}">{{ contractedbooking.bookingNumber }}</a></td>
+          <!-- 
+          <td class="action">
+            <a title="Edit this booking"
+              href="/bookings/editcontractedbooking?contractedbookingkey={{ contractedbooking.key }}">
+              <img src="/images/edit.png"/>
+            </a></td>
+            -->
+          <td class="action">
+            <a title="Delete this booking"
+              href="/bookings/deletecontractedbooking?contractedbookingkey={{ contractedbooking.key }}"
+                   onclick="return confirm('Are you sure?');">
+              <img src="/images/delete.png"/>
+            </a></td>
+        </tr>
+        {% endfor %}
+    </table>
 {% endblock pagecontent %}
