--- a/site/templates/bookings/managebookinginfo.html
+++ b/site/templates/bookings/managebookinginfo.html
@@ -24,13 +24,13 @@
               href="/bookings/collection/editenquirycollection?enquirycollectionkey={{ collection.key }}">
               <img src="/images/edit.png"/>
             </a></td>
+         -->
           <td class="action">
             <a title="Delete this enquiry"
-              href="/bookings/enquiry/deleteenquiry?enquirykey={{ enquiry.key }}"
+              href="/bookings/collection/deleteenquirycollection?enquirycollectionkey={{ collection.key }}"
                    onclick="return confirm('Are you sure?');">
               <img src="/images/delete.png"/>
             </a></td>
-         -->
         </tr>
         {% endfor %}
     </table>
