--- a/trunk/site/templates/bookings/viewcontractedbooking.html
+++ b/trunk/site/templates/bookings/viewcontractedbooking.html
@@ -10,7 +10,7 @@
 <h1>Contracted Booking</h1>
 
 <p>Booking Number: {{ booking.bookingNumber }} </p>
-<p>Booking Status: {{ booking.state }} </p>
+<p>Booking Status: {{ booking.parent.getState.title }} </p>
 <p>Enquiry: <a href="/bookings/enquiry/viewenquiry?enquirykey={{ booking.parent.key}}">{{ booking.parent.referenceNumber }}</a></p>
 {%if client %}
 <p>Guest: 
