--- a/site/templates/bookings/viewenquiry.html
+++ b/site/templates/bookings/viewenquiry.html
@@ -210,7 +210,7 @@
 </p>
 <table class="listing" cellspacing="0">
     <thead>
-      <td>Reference</td>
+      <td>Booking Number</td>
     </thead>
     {% for contractedbooking in enquiry.getContractedBookings %}
     <tr>
