Added Delete All Hosts to admin page

--- a/site/templates/admin/adminhome.html
+++ b/site/templates/admin/adminhome.html
@@ -8,5 +8,8 @@
     <p><a href="/admin/lookups">View and Maintain System Codes</a></p>
     <p><a href="/admin/packages">View and Maintain Accommodation Packages</a></p>
     <p><a href="/admin/statistics">Statistics</a></p>
+    <p><a href="/admin/deletehosts"
+          onclick="return confirm('Are you sure?');">
+      Danger: Delete All Hosts</a></p>
 
 {% endblock pagecontent %}
