Added size to slotview pagination

--- a/site/templates/admin/viewslots.html
+++ b/site/templates/admin/viewslots.html
@@ -6,7 +6,7 @@
     <p><strong>Slots</strong>
     {% if start %}
     <p><a href="javascript:history.back()">Previous</a>
-       <a href="?start={{ start }}">Next</a></p>
+       <a href="?size={{ size }}&start={{ start }}">Next</a></p>
     {% endif %}
 
     <table class="listing" cellspacing="0">
